Change model | fasterrcnn from retina

--- a/Detection/test_and_plot.ipynb
+++ b/Detection/test_and_plot.ipynb
@@ -79,7 +79,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.patches as patches\n",
     "\n",
-    "def plot_images(img, real, pred):\n",
+    "def test_plot_images(img, real, pred):\n",
     "    \n",
     "    img = img.permute(1,2,0)\n",
     "    \n",
@@ -150,7 +150,7 @@
     "batch_i = 0\n",
     "for im, annot in test_data_loader:\n",
     "    for sample_i in range(len(im)):\n",
-    "        plot_images(im[sample_i], annot[sample_i], preds_adj_all[batch_i][sample_i])\n",
+    "        test_plot_images(im[sample_i], annot[sample_i], preds_adj_all[batch_i][sample_i])\n",
     "    batch_i += 1\n",
     "    if batch_i == 1:\n",
     "        break"
