--- a/4. Detection yolo/EDA/data_split.ipynb
+++ b/4. Detection yolo/EDA/data_split.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "packed-celebration",
+   "id": "applied-absorption",
    "metadata": {},
    "source": [
     "# Data split\n",
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "federal-poland",
+   "execution_count": 10,
+   "id": "upset-honey",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,8 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "blond-funeral",
+   "execution_count": 11,
+   "id": "maritime-chuck",
    "metadata": {},
    "outputs": [
     {
@@ -33,21 +33,21 @@
        "4647"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_lst = os.listdir('../data')\n",
+    "data_lst = os.listdir('../src')\n",
     "\n",
     "len(data_lst)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "personal-settlement",
+   "execution_count": 12,
+   "id": "sound-proof",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        " '5d70c044e4b0aa5058b2f555.txt')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,8 +70,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "pursuant-correspondence",
+   "execution_count": 13,
+   "id": "engaging-workstation",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "molecular-february",
+   "id": "major-running",
    "metadata": {},
    "outputs": [
     {
@@ -122,8 +122,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "desirable-preparation",
+   "execution_count": 15,
+   "id": "apparent-calcium",
    "metadata": {},
    "outputs": [
     {
@@ -132,22 +132,22 @@
        "[]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "if not(os.path.isdir('../src/')):\n",
-    "        os.makedirs(os.path.join('../src/'))\n",
+    "if not(os.path.isdir('../data/')):\n",
+    "        os.makedirs(os.path.join('../data/'))\n",
     "\n",
-    "os.listdir('../src/')"
+    "os.listdir('../data/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "sunset-offset",
+   "execution_count": 16,
+   "id": "executive-syndication",
    "metadata": {},
    "outputs": [
     {
@@ -160,31 +160,31 @@
     }
    ],
    "source": [
-    "if not(os.path.isdir('../src/train/')):\n",
-    "        os.makedirs(os.path.join('../src/train/'))\n",
+    "if not(os.path.isdir('../data/org_train/')):\n",
+    "        os.makedirs(os.path.join('../data/org_train/'))\n",
     "\n",
     "# Train data\n",
     "for data in txt_lst[:1625]:\n",
-    "    org_data = '../data/' + data\n",
-    "    cop_data = '../src/train/' + data\n",
+    "    org_data = '../src/' + data\n",
+    "    cop_data = '../data/org_train/' + data\n",
     "    \n",
     "    shutil.copyfile(org_data, cop_data)\n",
     "\n",
-    "print(len(os.listdir('../src/train/')))\n",
+    "print(len(os.listdir('../data/org_train/')))\n",
     "\n",
     "for data in jpg_lst[:1625]:\n",
-    "    org_data = '../data/' + data\n",
-    "    cop_data = '../src/train/' + data\n",
+    "    org_data = '../src/' + data\n",
+    "    cop_data = '../data/org_train/' + data\n",
     "    \n",
     "    shutil.copyfile(org_data, cop_data)\n",
     "\n",
-    "print(len(os.listdir('../src/train/')))"
+    "print(len(os.listdir('../data/org_train/')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "significant-pollution",
+   "execution_count": 17,
+   "id": "related-definition",
    "metadata": {},
    "outputs": [
     {
@@ -197,31 +197,31 @@
     }
    ],
    "source": [
-    "if not(os.path.isdir('../src/val/')):\n",
-    "        os.makedirs(os.path.join('../src/val/'))\n",
+    "if not(os.path.isdir('../data/org_val/')):\n",
+    "        os.makedirs(os.path.join('../data/org_val/'))\n",
     "        \n",
     "# Validation data\n",
     "for data in txt_lst[1625:2090]:\n",
-    "    org_data = '../data/' + data\n",
-    "    cop_data = '../src/val/' + data\n",
+    "    org_data = '../src/' + data\n",
+    "    cop_data = '../data/org_val/' + data\n",
     "    \n",
     "    shutil.copyfile(org_data, cop_data)\n",
     "\n",
-    "print(len(os.listdir('../src/val/')))\n",
+    "print(len(os.listdir('../data/org_val/')))\n",
     "\n",
     "for data in jpg_lst[1625:2090]:\n",
-    "    org_data = '../data/' + data\n",
-    "    cop_data = '../src/val/' + data\n",
+    "    org_data = '../src/' + data\n",
+    "    cop_data = '../data/org_val/' + data\n",
     "    \n",
     "    shutil.copyfile(org_data, cop_data)\n",
     "\n",
-    "print(len(os.listdir('../src/val/')))"
+    "print(len(os.listdir('../data/org_val/')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "educational-diameter",
+   "execution_count": 18,
+   "id": "ready-angel",
    "metadata": {},
    "outputs": [
     {
@@ -234,31 +234,31 @@
     }
    ],
    "source": [
-    "if not(os.path.isdir('../src/test/')):\n",
-    "        os.makedirs(os.path.join('../src/test/'))\n",
+    "if not(os.path.isdir('../data/org_test/')):\n",
+    "        os.makedirs(os.path.join('../data/org_test/'))\n",
     "\n",
     "# Test data\n",
     "for data in txt_lst[2090:-3]:\n",
-    "    org_data = '../data/' + data\n",
-    "    cop_data = '../src/test/' + data\n",
+    "    org_data = '../src/' + data\n",
+    "    cop_data = '../data/org_test/' + data\n",
     "    \n",
     "    shutil.copyfile(org_data, cop_data)\n",
     "\n",
-    "print(len(os.listdir('../src/test/')))\n",
+    "print(len(os.listdir('../data/org_test/')))\n",
     "\n",
     "for data in jpg_lst[2090:-3]:\n",
-    "    org_data = '../data/' + data\n",
-    "    cop_data = '../src/test/' + data\n",
+    "    org_data = '../src/' + data\n",
+    "    cop_data = '../data/org_test/' + data\n",
     "    \n",
     "    shutil.copyfile(org_data, cop_data)\n",
     "\n",
-    "print(len(os.listdir('../src/test/')))"
+    "print(len(os.listdir('../data/org_test/')))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "musical-forty",
+   "id": "laden-beauty",
    "metadata": {},
    "outputs": [],
    "source": []
